# turbo-composer

./: .gitignore  README.md  composer.json  mago.toml  phpunit.xml
.github/workflows/: ci.yml  release.yml
benchmarks/: run.sh
benchmarks/fixtures/: laravel-real.json  monolith.json  symfony-real.json
rust/: Cargo.toml
rust/src/: clean.rs  extract.rs  lib.rs  main.rs  vendor_state.rs  verify.rs
rust/src/classmap/: cache.rs  codegen.rs  mod.rs  parser.rs  walker.rs
rust/tests/: integration.rs
src/: BinaryInstaller.php  RustBridge.php  TurboAutoloadGenerator.php  TurboInstallerPlugin.php
tests/: BinaryInstallerTest.php  CorrectnessTest.php  RustBridgeCommandTest.php  RustBridgeTest.php  TurboAutoloadGeneratorTest.php
tests/Integration/: CorrectnessTest.php
tests/Unit/: BinaryInstallerTest.php  RustBridgeCommandTest.php  RustBridgeTest.php  TurboAutoloadGeneratorTest.php
