[package]
name    = "turbo-composer"
version = "0.1.0"
edition = "2021"

[lib]
name = "turbo_composer"
crate-type = ["rlib"]

[[bin]]
name = "turbo-composer"
path = "src/main.rs"

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rayon        = "1.10"
ignore       = "0.4"
regex        = "1"
zip          = "2"
flate2       = "1"
tar          = "0.4"
memmap2      = "0.9"
sha1         = "0.10"
sha2         = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
